# poolPumpControl

./: .clang-format  .gitignore  CMakeLists.txt  Kconfig.projbuild  README.md
.github/workflows/: esp32-ci.yml  quality-checks.yml  release.yml  test-suite.yml
components/app_core/: CMakeLists.txt  app.c
components/app_core/include/pool_pump/: app.h
components/bluetooth_config/: CMakeLists.txt  README.md  bluetooth_config.c  bluetooth_config.h
components/networking/: CMakeLists.txt  networking.c
components/networking/include/pool_pump/: networking.h
components/nvs_storage/: CMakeLists.txt  nvs_storage.c
components/nvs_storage/include/: nvs_storage.h
components/price_client/: CMakeLists.txt  price_client.c
components/price_client/include/pool_pump/: price_client.h
components/price_fetcher/: CMakeLists.txt  price_fetcher.c
components/price_fetcher/include/: price_fetcher.h
components/pump_controller/: CMakeLists.txt  pump_controller.c
components/pump_controller/include/: pump_controller.h
components/pump_driver/: CMakeLists.txt  pump_driver.c
components/pump_driver/include/pool_pump/: pump_driver.h
components/relay_control/: CMakeLists.txt  relay_control.c
components/relay_control/include/: relay_control.h
components/scheduler/: CMakeLists.txt  scheduler.c
components/scheduler/include/pool_pump/: scheduler.h
components/sensors/: CMakeLists.txt  sensors.c
components/sensors/include/pool_pump/: sensors.h
components/storage/: CMakeLists.txt  storage.c
components/storage/include/pool_pump/: storage.h
components/wifi_manager/: CMakeLists.txt  wifi_manager.c
components/wifi_manager/include/: wifi_manager.h
docs/: RELAY_ESP32.md
include/: config.h
main/: CMakeLists.txt  app_main.c  config.c  main.c  pump_scheduler.c
test/: CMakeLists.txt  README.md  test_main.c
test/integration/: CMakeLists.txt  test_full_system.c  test_pump_scheduling.c
test/mocks/: mock_driver_gpio.c  mock_driver_gpio.h  mock_esp_http_client.c  mock_esp_http_client.h  mock_esp_wifi.c  mock_esp_wifi.h
test/unit/: CMakeLists.txt  test_nvs_storage.c  test_price_fetcher.c  test_pump_controller.c  test_relay_control.c  test_wifi_manager.c
